--- a/package.json
+++ b/package.json
@@ -3,31 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install",
-    "lint": "eslint",
-    "format": "prettier --write .",
-    "local": "node app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TL-Backend/aerpace-ecosystem-user-service.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/TL-Backend/aerpace-ecosystem-user-service/issues"
-  },
-  "homepage": "https://github.com/TL-Backend/aerpace-ecosystem-user-service#readme",
   "dependencies": {
     "dotenv": "^16.3.1",
     "dotnet": "^1.1.4",
     "express": "^4.18.2",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
-    "prettier": "^3.0.2",
+    "prettier": "^3.0.3",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1"
   },
@@ -36,5 +18,19 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0",
     "husky": "^8.0.0"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TL-Backend/aerpace-ecosystem-inventory-service.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/TL-Backend/aerpace-ecosystem-inventory-service/issues"
+  },
+  "homepage": "https://github.com/TL-Backend/aerpace-ecosystem-inventory-service#readme"
 }
