--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "dotnet": "^1.1.4",
     "express": "^4.18.2",
