Implemented import history API

--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "husky": "^8.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install",
+    "lint": "eslint",
+    "format": "prettier --write .",
+    "local": "node app.js"
   },
   "repository": {
     "type": "git",
