--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
     "prettier": "^3.0.3",
+    "request-promise": "^4.2.6",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1"
   },
