--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "async": "^3.2.4",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.3.1",
     "dotnet": "^1.1.4",
     "express": "^4.18.2",
+    "json2csv": "^6.0.0-alpha.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
     "prettier": "^3.0.3",
@@ -21,7 +26,8 @@
     "husky": "^8.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
