--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "app.js",
   "dependencies": {
     "async": "^3.2.4",
+    "aws-sdk": "^2.1460.0",
     "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.3.1",
     "dotnet": "^1.1.4",
     "express": "^4.18.2",
     "json2csv": "^6.0.0-alpha.2",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "pg": "^8.11.1",
