updated config to ENV

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "prepare": "husky install",
     "lint": "eslint",
     "format": "prettier --write .",
-    "local": "node app.js"
+    "local": "node app.js",
+    "dev": "NODE_ENV=development node app.js",
+    "staging": "NODE_ENV=production node app.js"
   },
   "dependencies": {
     "async": "^3.2.4",
